--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,23 @@
 {
-    "name": "normalize-less",
-    "version": "2.1.3",
-    "main": "normalize.less",
-    "author": "Richard Bailey",
-    "description": "a small normalize-css ( Thank you, Nicolas Gallagher ) fork of Markus Reiter's normalize.less. Mostly for formatting and removing dependencies on bootstrap.",
-    "keywords": [
-     	"normalize",
-     	"bower",
-     	"less"
-  	],
-    "ignore": [
-        "normalize-less.sublime-project"
-    ]
+  "name": "normalize-less",
+  "version": "2.1.3",
+  "main": "normalize.less",
+  "authors": [
+    "Richard Bailey <additive.inverse@gmail.com>"
+  ],
+  "description": "a small normalize-css ( Thank you, Nicolas Gallagher ) fork of Markus Reiter's normalize.less. Mostly for formatting and removing dependencies on bootstrap.",
+  "keywords": [
+    "normalize",
+    "bower",
+    "less"
+  ],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "homepage": "https://github.com/additiveinverse/normalize.less",
+  "license": "MIT"
 }
